Bug 1158293 - Fix ResumeStateMachine()'s seek handling r=cpearce